Bug 1060873 - Object.isExtensible() should return false when given primitive values as input. r=till